# ProjetPhoenix

./: .cproject  .gitignore  CMakeLists.txt  CMakeLists_template.txt  CMakePresets.json  projectPhoenix.ioc  readme.md
.devcontainer/: Dockerfile  devcontainer.json
CUBEIDE/COM_Master/: .cproject  Sirius_Test.ioc
CUBEIDE/COM_Master/Core/Src/: main.c
CUBEIDE/COM_Master/Debug/: Sirius_Test.elf  Sirius_Test.list
CUBEIDE/COM_Slave/: .cproject  Sirius_Test_Slave.ioc
CUBEIDE/COM_Slave/Core/Src/: main.c
CUBEIDE/COM_Slave/Debug/: Sirius_Test_Master.elf  Sirius_Test_Master.list  Sirius_Test_Master.map  makefile
CUBEIDE/COM_Slave/Debug/Core/Src/: main.cyclo  main.su  subdir.mk
CUBEIDE/Debug/: Sirius_Test.map  makefile
CUBEIDE/Debug/Core/Src/: main.cyclo  main.su
CUBEIDE/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: subdir.mk
Core/: CMakeLists.txt
Core/Inc/: main.h
Core/Src/: main.c  main.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Documentation/: Nomenclature.md  setup_xbee.txt
Documentation/Communication/: ComProtocols.md  ComSensors.xlsx  SPI.uxf  Sirius COM.docx
Documentation/Custom/Sensors/Accelerometer/: Adafruit_TDK_InvenSense.md
Documentation/Sensors/Accelerometer/: Adafruit_TDK_InvenSense.md
Documentation/UML/: Class.uxf  Sequence.drawio
Drivers/: CMakeLists.txt
Middlewares/: CMakeLists.txt
ci/: Jenkinsfile
cmake/: stm32.cmake  unity.cmake
proto/: CMakeLists.txt  simple.pb.c  simple.pb.h
proto/nanopb/: pb_encode.h
proto/nanopb/generator/proto/: nanopb_pb2.py
scripts/: InstallPackages.sh
tests/: CMakeLists.txt
